[package]
name = "cdk-common"
version.workspace = true
authors = ["CDK Developers"]
description = "CDK common types and traits"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
edition.workspace = true
rust-version.workspace = true # MSRV
license.workspace = true
readme = "README.md"

[features]
default = ["mint", "wallet"]
swagger = ["dep:utoipa", "cashu/swagger"]
test = []
bench = []
wallet = ["cashu/wallet", "dep:uuid"]
mint = ["cashu/mint", "dep:uuid"]
nostr = ["wallet", "cashu/nostr"]
prometheus = ["cdk-prometheus/default"]
http = ["dep:cdk-http-client"]
grpc = ["dep:tonic"]

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
cashu.workspace = true
cbor-diag.workspace = true
ciborium.workspace = true
serde.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
thiserror.workspace = true
tracing.workspace = true
cdk-prometheus = { workspace = true, optional = true}
url.workspace = true
uuid = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
futures.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_with.workspace = true
web-time.workspace = true
parking_lot = "0.12.5"
paste = "1.0.15"
tonic = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cdk-http-client = { workspace = true, optional = true, features = ["bitreq"] }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "test-util", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cdk-http-client = { workspace = true, optional = true, default-features = false, features = ["reqwest"] }
uuid = { workspace = true, features = ["js"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
tokio = { workspace = true, default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
rand.workspace = true
bip39.workspace = true
wasm-bindgen-test = "0.3"
criterion.workspace = true

[[bench]]
name = "transaction_id_benchmark"
harness = false

[lints]
workspace = true
