[package]
name = "cdk-exchange-rate"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CDK exchange-rate oracle primitives"
readme.workspace = true

[dependencies]
async-trait.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros", "test-util"] }
tokio-stream.workspace = true
tracing.workspace = true

[features]
default = []
sources-http = ["dep:reqwest"]

[dev-dependencies]
cdk-fake-wallet.workspace = true

[lints]
workspace = true
