[package]
name = "cdk-fake-wallet"
version = "0.7.1"
edition = "2021"
authors = ["CDK Developers"]
license = "MIT"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version = "1.75.0" # MSRV
description = "CDK fake ln backend"

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
cdk = { path = "../cdk", version = "0.7.2" }
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
lightning-invoice.workspace = true
tokio-stream = "0.1.15"
