[package]
name = "cdk-fake-wallet"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK fake ln backend"
readme = "README.md"

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
uuid.workspace = true
