[package]
name = "cdk-fake-wallet"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK fake ln backend"
readme = "README.md"

[features]
default = ["cdk-http-client/bitreq"]

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
cdk-common = { workspace = true, default-features = false, features = ["mint", "http"] }
cdk-http-client = { workspace = true, default-features = false, optional = true }
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
web-time.workspace = true

[lints]
workspace = true
