[package]
name = "cdk-http-client"
version.workspace = true
authors = ["CDK Developers"]
description = "HTTP client abstraction for CDK"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitreq = { version = "0.3.1", features = ["async", "async-https-rustls", "json-using-serde", "proxy"] }
serde_urlencoded = "0.7"
regex.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "Response", "Headers"] }
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
mockito = "1"
serde = { workspace = true }

[lints]
workspace = true
