[package]
name = "cdk-http-client"
version.workspace = true
authors = ["CDK Developers"]
description = "HTTP client abstraction for CDK"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"

[features]
default = ["bitreq"]
bitreq = ["dep:bitreq"]
reqwest = ["dep:reqwest"]
bip353 = ["dep:hickory-resolver", "dep:rustls", "dep:ring"]
tor = [
    "dep:arti-client",
    "dep:http-body-util",
    "dep:getrandom",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tokio",
    "dep:tokio-native-tls",
    "dep:tor-rtcompat",
]

[dependencies]
async-trait.workspace = true
cashu.workspace = true
serde_urlencoded = "0.7"
regex.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitreq = { version = "0.3.4", features = ["async", "async-https-rustls", "json-using-serde", "proxy"], default-features = false, optional = true }
hickory-resolver = { version = "0.25.2", optional = true, features = ["dnssec-ring"] }
ring = { version = "0.17", optional = true }
rustls = { workspace = true, optional = true }
arti-client = { version = "0.44.0", git = "https://git.cashu.dev/thesimplekid/arti.git", rev = "f9d6a1af4701b6fb6e357a610f974debf4b48c22", optional = true, default-features = false, features = ["tokio", "rustls"] }
getrandom = { version = "0.2", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", optional = true, features = ["client", "http1"] }
hyper-util = { version = "0.1", optional = true, features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"], optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
tor-rtcompat = { version = "0.44.0", git = "https://git.cashu.dev/thesimplekid/arti.git", rev = "f9d6a1af4701b6fb6e357a610f974debf4b48c22", optional = true, features = ["tokio", "rustls"] }
tokio-tungstenite = { workspace = true, features = [
    "rustls", "rustls-tls-native-roots", "connect"
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType", "Request", "RequestInit", "RequestRedirect", "Response", "Headers"] }
js-sys = "0.3"
futures-channel = "0.3"
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
mockito = "1"
serde = { workspace = true }

[lints]
workspace = true
