[package]
name = "cdk-integration-tests"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
description = "Core Cashu Development Kit library implementing the Cashu protocol"
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"


[features]
default = []
http_subscription = ["cdk/http_subscription"]
onchain = ["cdk-mintd/onchain"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
rand.workspace = true
bip39 = { workspace = true, features = ["rand"] }
anyhow.workspace = true
cashu = { workspace = true, features = ["mint", "wallet"] }
cdk = { workspace = true, features = ["mint", "wallet", "bip353"] }
cdk-cln = { workspace = true }
cdk-lnd = { workspace = true }
cdk-ldk-node = { workspace = true }
cdk-bdk = { workspace = true }
cdk-axum = { workspace = true }
cdk-sqlite = { workspace = true }
cdk-redb = { workspace = true }
cdk-fake-wallet = { workspace = true }
cdk-common = { workspace = true, features = ["mint", "wallet", "http"] }
cdk-http-client = { workspace = true }
cdk-mintd = { workspace = true, features = ["cln", "lnd", "fakewallet", "grpc-processor", "lnbits", "management-rpc", "sqlite", "postgres", "ldk-node", "prometheus", "onchain"] }
futures = { workspace = true, default-features = false, features = [
    "executor",
] }
once_cell.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
lightning-invoice.workspace = true
fedimint-tonic-lnd = "0.2.0"
cln-rpc = "0.4.0"
bitcoincore-rpc = "0.19.0"
ldk-node.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tower-service = "0.3.3"
tokio-util.workspace = true
bitcoin = "0.32.0"
clap = { workspace = true, features = ["derive"] }
web-time.workspace = true
lightning.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
bip39 = { workspace = true, features = ["rand"] }
anyhow.workspace = true
cdk-axum = { workspace = true }
cdk-fake-wallet = { workspace = true }
cdk-ffi = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "allow"

[lints.rustdoc]
missing_docs = "warn"
bare_urls = "warn"
