[package]
name = "cdk-integration-tests"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
description = "Core Cashu Development Kit library implementing the Cashu protocol"
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"


[features]
http_subscription = ["cdk/http_subscription"]
bdk = ["cdk-mintd/bdk"]
payjoin-regtest = [
    "cdk-mintd/payjoin-local-https",
    "dep:ohttp-relay",
    "dep:payjoin",
    "dep:payjoin-directory",
    "dep:rcgen",
    "dep:rustls",
]

[dependencies]
async-trait.workspace = true
axum.workspace = true
rand.workspace = true
bip39 = { workspace = true, features = ["rand"] }
anyhow.workspace = true
cashu = { workspace = true, features = ["mint", "wallet"] }
cdk = { workspace = true, features = ["mint", "wallet", "bip353", "nwc"] }
cdk-cln = { workspace = true }
cdk-lnd = { workspace = true }
cdk-ldk-node = { workspace = true }
cdk-axum = { workspace = true }
cdk-sqlite = { workspace = true }
cdk-redb = { workspace = true }
cdk-fake-wallet = { workspace = true }
cdk-common = { workspace = true, features = ["mint", "wallet", "http"] }
cdk-http-client = { workspace = true, features = ["bitreq"] }
cdk-nwc = { workspace = true }
nostr-sdk = { workspace = true }
cdk-mintd = { workspace = true, features = ["cln", "lnd", "fakewallet", "grpc-processor", "lnbits", "management-rpc", "sqlite", "postgres", "ldk-node", "bdk", "prometheus"] }
futures = { workspace = true, default-features = false, features = [
    "executor",
] }
once_cell.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
url.workspace = true
lightning-invoice.workspace = true
fedimint-tonic-lnd = "0.4.0"
cln-rpc = "0.4.0"
bitcoincore-rpc = "0.19.0"
ldk-node.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tower-service = "0.3.3"
tokio-util.workspace = true
bitcoin = "0.32.0"
clap = { workspace = true, features = ["derive"] }
web-time.workspace = true
lightning.workspace = true
ohttp-relay = { version = "=0.0.10", features = ["_test-util"], optional = true }
payjoin = { version = "0.25.0", default-features = false, features = ["v2", "io"], optional = true }
payjoin-directory = { version = "=0.0.3", features = ["_danger-local-https"], optional = true }
rcgen = { version = "0.11", optional = true }
rustls = { version = "0.22", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
bip39 = { workspace = true, features = ["rand"] }
anyhow.workspace = true
cdk-axum = { workspace = true }
cdk-fake-wallet = { workspace = true }
cdk-ffi = { workspace = true, features = ["npubcash", "bip353"] }
tower-http = { workspace = true, features = ["cors"] }
nwc = { version = "0.44.0", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "allow"

[lints.rustdoc]
missing_docs = "warn"
bare_urls = "warn"
