[package]
name = "cdk-ldk-node"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK ln backend for cdk-ldk-node"
readme = "README.md"

[dependencies]
async-trait.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
ldk-node = { version = "0.6.1" }
tokio-stream = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true


