[package]
name = "cdk-ldk"
version = "0.1.0"
edition = "2021"
authors = ["CDK Developers"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true # MSRV
license.workspace = true

[dependencies]
async-stream = "0.3.5"
async-trait.workspace = true
bincode = { version = "1.3.3", default-features = false }
bitcoin.workspace = true
bitcoincore-rpc = "0.17.0"
cdk = { workspace = true, default-features = false, features = ["mint"] }
chrono = { version = "0.4.38", default-features = false }
futures.workspace = true
lightning = { version = "0.0.123" }
lightning-background-processor = { version = "0.0.123", features = ["futures"] }
lightning-block-sync = { version = "0.0.123", features = ["tokio"] }
lightning-net-tokio = "0.0.123"
lightning-persister = "0.0.123"
lightning-rapid-gossip-sync = "0.0.123"
redb.workspace = true
reqwest = { version = "0.12.5", default-features = false }
serde.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.11", default-features = false }
tracing.workspace = true
thiserror.workspace = true
