[package]
name = "cdk-lnbits"
version = "0.7.1"
edition = "2021"
authors = ["CDK Developers"]
license = "MIT"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version = "1.75.0" # MSRV
description = "CDK ln backend for lnbits"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
axum.workspace = true
bitcoin.workspace = true
cdk = { path = "../cdk", version = "0.7.2", default-features = false, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.11", default-features = false }
tracing.workspace = true
thiserror.workspace = true
lnbits-rs = "0.3.0"
