[package]
name = "cdk-lnbits"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK ln backend for lnbits"
readme = "README.md"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
bitcoin.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
lnbits-rs = "0.9.1"
serde_json.workspace = true
rustls.workspace = true
