[package]
name = "cdk-lnd"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK ln backend for lnd"
readme = "README.md"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio = { workspace = true, default-features = false, features = ["fs"] }
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
prost.workspace = true
tonic = { workspace = true, features = ["transport"] }
http = "1.3.1"
hyper = { version = "1.6.0", features = ["http2", "client"] }
hyper-util = { version = "0.1.14", features = ["client"] }
hyper-rustls = { version = "0.27.7", features = ["http2", "tls12"] }
rustls.workspace = true
rustls-pemfile = "2.2.0"

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
